complete JCPT-69