@@ -1,15 +1,23 @@
-FROM maven:3-jdk-8-alpine as builder
+FROM openjdk:17.0.1-jdk-slim AS build
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
-COPY . /usr/src/app
-RUN mvn package
+COPY pom.xml .
 
-FROM openjdk:8-jre-alpine
+COPY src src
 
-COPY --from=builder /usr/src/app/target/*.jar /app.jar
+COPY settings.xml ./settings.xml
 
-EXPOSE 8080
+RUN apt-get update && apt-get install -y maven
 
-ENTRYPOINT ["java"]
-CMD ["-jar", "/app.jar"]
+RUN mvn -B package -s ./settings.xml --file pom.xml
+
+FROM openjdk:17.0.1-jdk-slim
+
+WORKDIR /app
+
+COPY --from=build /app/target/*.jar app.jar
+
+EXPOSE 8055
+
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "app.jar"]
